Formalize the script into a proper app
Formalize the script into a proper app to streamline maintenance
and installs.

This refactor includes the following changes and improvements:
* structures the app for gem deployment and adds Bundler utilities
* moves the main code into the GithubMarkdownPreview::HtmlPreview
class to allow other programs to include a preview
* adds comprehensive tests
* improves the scripts output (especially in error cases)
* updates to latest github css

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,22 @@ publish
 target
 .idea
 out
+
+# bundler suggested ignores
+*.gem
+*.rbc
+.bundle
+.config
+.yardoc
+Gemfile.lock
+InstalledFiles
+_yardoc
+coverage
+doc/
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
