--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ rvm:
   - "1.9.3"
   - jruby-18mode # JRuby in 1.8 mode
   - jruby-19mode # JRuby in 1.9 mode
-  - rbx-18mode
-  - rbx-19mode
+env: RUBYOPT=rubygems
