--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ rvm:
   - jruby-18mode # JRuby in 1.8 mode
   - jruby-19mode # JRuby in 1.9 mode
 env: RUBYOPT=rubygems
+before_script:
+  - "apt-get install libicu-dev"
