--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+before_install: apt-get install libicu-dev -y
 language: ruby
 rvm:
   - "1.8.7"
@@ -6,5 +7,3 @@ rvm:
   - jruby-18mode # JRuby in 1.8 mode
   - jruby-19mode # JRuby in 1.9 mode
 env: RUBYOPT=rubygems
-before_script:
-  - "apt-get install libicu-dev"
