--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-before_install: apt-get install libicu-dev -y
+before_install: sudo apt-get install libicu-dev -y
 language: ruby
 rvm:
   - "1.8.7"
