--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-before_install: sudo apt-get install libicu-dev -y
 language: ruby
 rvm:
   - "1.8.7"
   - "1.9.3"
   - "2.0.0"
-env: RUBYOPT=rubygems
+env:
+  - INCLUDE_LINGUIST=true
+  - INCLUDE_LINGUIST=false
+
+before_install:
+  - if [[ "$INCLUDE_LINGUIST" == "true" ]]; then BUNDLE_GEMFILE=Gemfile.optional; sudo apt-get install libicu-dev -y; fi
