--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ env:
   - INCLUDE_LINGUIST=false
 
 before_install:
+  - gem update --system 2.1.11 #  todo: workaround for https://github.com/rubygems/rubygems/pull/763.  Delete it once that fix is released
   - if [[ "$INCLUDE_LINGUIST" == "true" ]]; then BUNDLE_GEMFILE=Gemfile.optional; sudo apt-get install libicu-dev -y; fi
