--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ env:
   - INCLUDE_LINGUIST=false
 
 before_install:
-  - gem install bundler
+  - gem install bundler -v '1.17.3'
   - if [[ "$INCLUDE_LINGUIST" == "true" ]]; then BUNDLE_GEMFILE=Gemfile.optional; sudo apt-get install libicu-dev -y; fi
